--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "submodules/simple-knn"]
 	path = submodules/simple-knn
 	url = https://gitlab.inria.fr/bkerbl/simple-knn.git
+[submodule "submodules/langsplat-rasterization"]
+	path = submodules/langsplat-rasterization
+	url = https://github.com/minghanqin/langsplat-rasterization.git
